--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,12 @@
 .vscode/
 results/*.db
 oxford/*.db
+
 words_lists/*.txt
+words_lists/*.py
+words_lists/levels/
+words_lists/types/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
